--- a/frontend/src/components/styles.css
+++ b/frontend/src/components/styles.css
@@ -8,7 +8,7 @@ body {
 }
 
 header {
-    background-color: #e63946;
+    background-color: #a50815;
     color: #fff;
     padding: 15px;
     text-align: center;
@@ -98,7 +98,7 @@ header nav a:hover {
 
 .card .price {
     font-weight: bold;
-    color: #e63946;
+    color: #a50815;
     margin-top: 10px;
 }
 
